Word Wrap Fix Again
Added word wrap to fix links in APA citation.

--- a/css/main.css
+++ b/css/main.css
@@ -311,6 +311,10 @@ article a {
     width: 50%;
 }
 
+.cite {
+    word-break: break-all;
+}
+
 article a:hover {
     border-color: rgb(255, 102, 0);
 }
